apps/test-app-1/app-test-1.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-app-1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-app-1-deploy
  namespace: test-app-1
spec:
  replicas: 1
  selector: 
    matchLabels:
      app: test-app-1
  template:
    metadata:
      labels: 
        app: test-app-1
    spec:
      containers:
        - name: test-app-1
          image:nginx #nginx:latest #nginx:1.25.2
          ports:
          - name: web
            containerPort: 80
---
apiVersion: v1
kind: Service  
metadata:
  name: test-app-1-svc
  namespace: test-app-1
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: test-app-1
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-app-1-ingress
  namespace: test-app-1
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: test-app-1.andrzej.online
    http:
      paths:    
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-app-1-svc
            port:
              number: 80
